[package]
name = "p2panda-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
ciborium = "0.2.2"
libfuzzer-sys = "0.4"

[dependencies.p2panda-core]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
